# cardsharp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  lefthook.yml  profile_blackjack.py  pyproject.toml  pyrefly.toml  pytest.ini  shell.nix
.beads/: beads.left.meta.json  issues.jsonl  metadata.json
.github/workflows/: python.yml
cardsharp/adapters/: __init__.py  base.py  cli.py  dummy.py  web.py
cardsharp/api/: __init__.py  base.py  blackjack.py  durak.py  flow.py  high_card.py  war.py
cardsharp/baccarat/: __init__.py  baccarat.py  game.py  hand.py  rules.py
cardsharp/blackjack/: action.py  actor.py  bankroll.py  basic_strategy.csv  blackjack.py  casino.py  constants.py  decision_logger.py  environment.py  execution_variance.py  hand.py  notation.py  realistic_strategy.py  rules.py  state.py  state_events.py  stats.py  strategy.py  strategy_fast.py  test_cases.txt  test_engine.py  test_parser.py  test_runner.py  test_support.py
cardsharp/blackjack/solver/: __init__.py  combinatorial.py  dealer.py  engine.py  player.py  types.py
cardsharp/blackjack/variants/: __init__.py  base.py  classic.py  registry.py  spanish21.py
cardsharp/common/: actor.py  card.py  deck.py  hand.py  io_interface.py  shoe.py  state.py  testing.py  util.py
cardsharp/dragon_tiger/: __init__.py  dragon_tiger.py  game.py
cardsharp/durak/: __init__.py  constants.py  state.py  transitions.py
cardsharp/engine/: __init__.py  base.py  blackjack.py  durak.py  high_card.py  war.py
cardsharp/events/: __init__.py  emitter.py  websocket.py
cardsharp/high_card/: constants.py  high_card.py  state.py  transitions.py
cardsharp/roulette/: actor.py
cardsharp/state/: __init__.py  models.py  transitions.py
cardsharp/tools/: verify_rules.py
cardsharp/ui/: blackjack_ui.py
cardsharp/verification/: __init__.py  events.py  immutable_verifier.py  main.py  playback.py  schema.py  statistics.py  storage.py  verifier.py
cardsharp/war/: constants.py  state.py  transitions.py  war.py
docs/: BLACKJACK_API_DESIGN.md  BLACKJACK_ENGINE.md  BLACKJACK_ENGINE_PLAN.md  architecture_modernization.md  optimization_principles.md  phase4_completion.md  phase4_progress.md  ui_integration.md  web_adapter.md  websocket_support.md
examples/: adapter_demo.py  async_api_demo.py  blackjack_engine_demo.py  blackjack_engine_test.py  blackjack_game_demo.py  card_handling_demo.py  card_handling_test.py  cli_blackjack.py  dealer_errors_demo.py  durak_demo.py  event_cleanup_demo.py  event_cleanup_test.py  event_system_demo.py  high_card_engine_demo.py  immutable_state_demo.py  modern_blackjack_ui.py  verification_demo.py  war_engine_demo.py  websocket_client.py  websocket_server.py
tests/: conftest.py  test_actor.py  test_card.py  test_deck.py  test_focused_integration.py  test_hand.py  test_io_interface.py  test_ui_integration.py  test_util.py
tests/api/: __init__.py  conftest.py  run_tests.py  test_blackjack_game.py  test_event_cleanup.py
tests/baccarat/: __init__.py  test_baccarat.py
tests/blackjack/: __init__.py  conftest.py  test_blackjack_actor.py  test_blackjack_hand.py  test_blackjack_stats.py  test_casino_environment.py  test_check_blackjack.py  test_counting_strategy.py  test_engine_validation.py  test_env_simple.py  test_environment_integration.py  test_house_edge.py  test_multiplayer.py  test_rules.py  test_scenarios.py  test_shoe_penetration.py  test_stats.py  test_strategies.py  test_strategy_fast.py
tests/blackjack/solver/: test_dealer.py  test_engine.py
tests/common/: test_shuffle_fidelity.py
tests/dragon_tiger/: __init__.py  test_dragon_tiger.py
tests/engine/: __init__.py  conftest.py  test_blackjack_engine.py  test_durak_engine.py  test_engine_base.py  test_high_card_engine.py  test_war_engine.py
tests/events/: __init__.py  test_event_emitter.py
tests/integration/: conftest.py  pytest.ini  test_blackjack_integration.py  test_system_integration.py
tests/verification/: __init__.py  conftest.py  test_database_schema.py  test_immutable_verification.py  test_verification.py  test_verification_storage.py
web/: index.html
