[tool.poetry]
name = "cardsharp"
version = "0.4.0"
description = "Card Playing Simulator focused on Blackjack"
authors = ["Matt Michie <mmichie@gmail.com>"]
license = "MIT"
readme = "README.md"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Games/Entertainment :: Board Games",
]

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "*"
aiofiles = "*"
matplotlib = "^3.9.2"
streamlit = "^1.38.0"

[tool.poetry.dev-dependencies]
black = "^24.8.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.24.0"
flake8 = "^7.1.1"
pylint = "^3.3.1"
ruff = "^0.6.8"

[tool.poetry.group.dev.dependencies]
py-spy = "^0.3.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as other linters in project
line-length = 120

