[tool.poetry]
name = "cardsharp"
version = "0.5.0"
description = "Card Playing Simulator focused on Blackjack"
authors = ["Matt Michie <mmichie@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
]

[tool.poetry.dependencies]
python = "^3.12"
asyncio = ">=3.4.3,<4.0.0"
aiofiles = ">=24.0.0"
matplotlib = "^3.9.2"
streamlit = "^1.38.0"
scipy = "^1.15.3"

[tool.poetry.group.dev.dependencies]
black = ">=24.10,<26.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.25.1"
flake8 = "^7.1.1"
pylint = "^3.3.1"
ruff = ">=0.9.1,<0.12.0"
py-spy = ">=0.3.14,<0.5.0"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 120
