[project]
name = "cardsharp"
version = "0.5.0"
description = "Card Playing Simulator focused on Blackjack"
authors = [
    { name = "Matt Michie", email = "mmichie@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "asyncio>=3.4.3,<4.0.0",
    "aiofiles>=24.0.0",
    "matplotlib>=3.9.2,<4.0.0",
    "streamlit>=1.38.0,<2.0.0",
    "scipy>=1.15.3,<2.0.0",
    "numpy>=2.2.5,<3.0.0",
    "pytest-xdist>=3.6.1,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10,<26.0",
    "pytest>=8.3.3,<9.0.0",
    "pyrefly>=0.25.1,<1.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-asyncio>=0.25.1,<1.0.0",
    "flake8>=7.1.1,<8.0.0",
    "pylint>=3.3.1,<4.0.0",
    "ruff>=0.9.1,<0.12.0",
    "py-spy>=0.3.14,<0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E501"]  # Ignore line too long
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
